end user setup
